--- a/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
+++ b/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
@@ -2,7 +2,12 @@
     <!-- Header Section -->
     <div class="header">
         <div class="title-section">
-            <h1>{{ recipe.title }}</h1>
+            <div class="d-flex align-items-center gap-3">
+                <h1>{{ recipe.title }}</h1>
+                <div class="print-qr-code header-qr" *ngIf="qrCodeDataUrl">
+                    <img [src]="qrCodeDataUrl" alt="QR">
+                </div>
+            </div>
             <p class="source" *ngIf="recipe.source">
                 Source: <a *ngIf="recipe.source.startsWith('http'); else textSource" [href]="recipe.source"
                     target="_blank" rel="noopener noreferrer">{{ recipe.source }}</a>
@@ -10,11 +15,14 @@
             </p>
         </div>
         <div class="actions">
+            <button mat-stroked-button color="primary" (click)="printRecipe()">
+                <mat-icon>print</mat-icon> Print
+            </button>
             <button mat-flat-button color="primary" [routerLink]="['/recipes', recipe.id, 'edit']">
                 <mat-icon>edit</mat-icon> Edit
             </button>
-            <button mat-icon-button color="warn" (click)="deleteRecipe()">
-                <mat-icon>delete</mat-icon>
+            <button mat-stroked-button color="warn" (click)="deleteRecipe()">
+                <mat-icon>delete</mat-icon> Delete
             </button>
         </div>
     </div>
