--- a/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
+++ b/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
@@ -34,6 +34,9 @@
             <button mat-stroked-button color="warn" (click)="deleteRecipe()">
                 <mat-icon>delete</mat-icon> Delete
             </button>
+            <button mat-stroked-button color="accent" (click)="createLeftover()">
+                <mat-icon>inventory_2</mat-icon> Make Leftover
+            </button>
         </div>
     </div>
 
