--- a/ui/pantry-ui/src/styles.scss
+++ b/ui/pantry-ui/src/styles.scss
@@ -124,3 +124,18 @@ app-root {
     overflow: visible !important;
   }
 }
+
+// Kiosk Mode Styles
+body.kiosk-mode {
+  zoom: 1.35;
+
+  // /* Improve touch targets for scrollbars */
+  // ::-webkit-scrollbar {
+  //   width: 12px;
+  //   height: 12px;
+  // }
+  // ::-webkit-scrollbar-thumb {
+  //   background: #ccc;
+  //   border-radius: 6px;
+  // }
+}
